--- a/doc/magic.man
+++ b/doc/magic.man
@@ -1,4 +1,4 @@
-.\" $Id: magic.man,v 1.35 2007/01/10 22:54:21 christos Exp $
+.\" $Id: magic.man,v 1.36 2007/01/10 22:56:49 christos Exp $
 .Dd January 10, 2007
 .Dt MAGIC __FSECTION__
 .Os
@@ -278,7 +278,7 @@ If a the test on a line at level
 succeeds, all following tests at level
 .Em n+1
 are performed, and the messages printed if the tests succeed, untile a line
-ith level
+with level
 .Em n
 (or less) appears.
 For more complex files, one can use empty messages to get just the
@@ -446,4 +446,4 @@ a system on which the lengths are invariant.
 .\" the changes I posted to the S5R2 version.
 .\"
 .\" Modified for Ian Darwin's version of the file command.
-.\" @(#)$Id: magic.man,v 1.35 2007/01/10 22:54:21 christos Exp $
+.\" @(#)$Id: magic.man,v 1.36 2007/01/10 22:56:49 christos Exp $
