--- a/doc/file.man
+++ b/doc/file.man
@@ -1,4 +1,4 @@
-.\" $Id: file.man,v 1.63 2007/01/10 23:00:16 christos Exp $
+.\" $File: file.man,v 1.63 2007/01/10 23:00:16 christos Exp $
 .Dd January 8, 2007
 .Dt FILE __CSECTION__
 .Os
