--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-23  5:25 Christos Zoulas <christos@zoulas.com>
+
+	* Add --with-filename, and --no-filename (Reuben Thomas)
+
 2007-10-23  3:59 Christos Zoulas <christos@zoulas.com>
 
 	* Rest of the mime split (Reuben Thomas)
