--- a/README
+++ b/README
@@ -71,6 +71,10 @@ readelf.[ch] - Stand-alone elf parsing code.
 compress.c - on-the-fly decompression.
 print.c - print results, errors, warnings.
 
+You can download the latest version of file from:
+
+	ftp://ftp.astron.com/pub/file/
+
 If your gzip sometimes fails to decompress things complaining about a short
 file, apply this patch [which is going to be in the next version of gzip]:
 *** -   Tue Oct 29 02:06:35 1996
