--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 ** README for file(1) Command **
-@(#) $File: README,v 1.34 2006/05/03 18:48:33 christos Exp $
+@(#) $File: README,v 1.36 2008/01/18 21:08:03 christos Exp $
+
+E-mail: christos@zoulas.com
+
+Phone: Do not even think of telephoning me about this program. Send cash first!
 
 This is Release 4.x of Ian Darwin's (copyright but distributable)
 file(1) command. This version is the standard "file" command for Linux,
@@ -88,10 +92,6 @@ file, apply this patch [which is going to be in the next version of gzip]:
         read_error();
       }
       bytes_in += (ulg)insize;
-
-E-mail: christos@astron.com
-
-Phone: Do not even think of telephoning me about this program. Send cash first!
 
 Parts of this software were developed at SoftQuad Inc., developers
 of SGML/HTML/XML publishing software, in Toronto, Canada.
