more build fixes: - add missing files to .cvsignore [rrt@] - kill zoulas.com -> astron.com - remove configure

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ** README for file(1) Command **
-@(#) $File: README,v 1.36 2008/01/18 21:08:03 christos Exp $
+@(#) $File: README,v 1.37 2008/02/05 19:08:12 christos Exp $
 
-E-mail: christos@zoulas.com
+E-mail: christos@astron.com
 
 Phone: Do not even think of telephoning me about this program. Send cash first!
 
